# axolotl-thinking-weight-plugin

./: README.md  pyproject.toml
axolotl_plugins/thinking_weight/: __init__.py  args.py  trainer.py
