[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "axolotl-thinking-weight-plugin"
version = "0.1.0"
description = "An Axolotl plugin for weighted loss on thinking tokens."
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "axolotl"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["axolotl_plugins*"]
namespaces = true